--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,7 @@
           <a href="https://github.com/pages-themes/slate/">Slate</a>
           theme
         </p>
+        <p><a href="https://www.flaticon.com/free-icons/computer" title="computer icons">Computer icons created by monkik - Flaticon</a></p>
       </footer>
     </div>
   </body>
